Fix layout issues in tagline and flag

--- a/packages/cfpb-layout/src/organisms/wells.less
+++ b/packages/cfpb-layout/src/organisms/wells.less
@@ -23,7 +23,6 @@
 
         // If an inkwell contains a tagline, properly lay it out.
         .a-tagline {
-            margin-top: unit( @grid_gutter-width / @base-font-size-px, em );
             margin-bottom: unit( @grid_gutter-width / 2 / @base-font-size-px, em );
         }
     }
